--- a/css/sobre.css
+++ b/css/sobre.css
@@ -20,9 +20,24 @@ figure {
   padding: 15px;
   text-align: center;
   background-color: whitesmoke;
-  border: 1px solid lightgray;
+  border: 1px solid lightgrey;
 }
 
 figcaption {
   margin-top: 10px;
+}
+
+.matriz-musicdot {
+  width: 550px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.familia-tupfeln {
+  width: 275px;
+  float: right;
+}
+
+figure img {
+  width: 100%;
 }
