--- a/css/sobre.css
+++ b/css/sobre.css
@@ -6,12 +6,12 @@ body {
   color: #3d3d3d;
 }
 
-h1 {
+.titulo {
   padding: 10px;
   background-color: #e1edf2;
 }
 
-h2 {
+.subtitulo {
   border-bottom: 2px solid black;
 }
 
